feat: add metric data
