# app/business/deviceMonitor/deviceMonitorModel/deviceMonitor.go
@@ -1,4 +1,7 @@
 package deviceMonitorModel
 
-type DeviceMonitorData struct {
+type DeviceMonitorMetricReq struct {
+	DeviceId   string `json:"device_id"`
+	TemplateId string `json:"template_id"`
+	DataId     string `json:"data_id"`
 }
